--- a/app/views/propcott/view.html
+++ b/app/views/propcott/view.html
@@ -336,6 +336,16 @@
 		<script>
 		(adsbygoogle = window.adsbygoogle || []).push({});
 		</script>
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Propcott View Ad 2 -->
+		<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5509225747243146"
+     data-ad-slot="7897641915"
+     data-ad-format="auto"></ins>
+		<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
 	</div>
     {% endif %}
 	</div>
